fix: question arrow align

--- a/src/components/Faq/style.scss
+++ b/src/components/Faq/style.scss
@@ -25,6 +25,7 @@
 
     .question {
         gap: 1vw;
+        align-items: center;
     }
 
     .Collapsible {
